--- a/popup.html
+++ b/popup.html
@@ -13,16 +13,40 @@
         width: 200px;
         padding: 5px;
         margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        transition: all 0.3s ease;
+      }
+      #query.error {
+        border-color: #dc3545;
+        background-color: #fff8f8;
       }
       #searchBtn {
         padding: 5px 10px;
         cursor: pointer;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 4px;
+      }
+      #searchBtn:hover {
+        background-color: #0056b3;
       }
       .loading {
         display: none;
         margin-top: 10px;
+        color: #666;
       }
       .loading.active {
+        display: block;
+      }
+      #errorMessage {
+        display: none;
+        color: #dc3545;
+        font-size: 12px;
+        margin-top: 5px;
+      }
+      #errorMessage.active {
         display: block;
       }
     </style>
@@ -30,9 +54,9 @@
   <body>
     <input type="text" id="query" placeholder="タブ名やキーワード" />
     <button id="searchBtn">切り替え</button>
+    <div id="errorMessage"></div>
     <div id="loading" class="loading">検索中...</div>
 
-    <script src="gemini-client.js"></script>
     <script src="popup.js"></script>
   </body>
 </html>
